# asr-ros-pkg

./: .gitmodules  LICENSE  README.md
perception/scene_understanding/active_scene_recognition_psm/: CMakeLists.txt  package.xml
perception/scene_understanding/active_scene_recognition_psm/launch/: active_scene_recognition.launch  active_scene_recognition.launch~  record_visualisation  rosconsole_asr.config  search_visualization.vcg  settings.yaml~
perception/scene_understanding/active_scene_recognition_psm/launch/.svn/: all-wcprops  entries
perception/scene_understanding/active_scene_recognition_psm/launch/.svn/text-base/: active_scene_recognition.launch.svn-base  object_search_with_rviz.launch.svn-base  settings.yaml.svn-base
perception/scene_understanding/active_scene_recognition_psm/rsc/: table.dae
perception/scene_understanding/active_scene_recognition_psm/rsc/.svn/: all-wcprops  entries
perception/scene_understanding/active_scene_recognition_psm/src/: AttributedPoint.h  View.h  asrPosePredictor.h  asrStateMachine.cpp  asrStateMachine.h  asrVisualizer.cpp  asrVisualizer.h  grid.h  ptuCamControl.cpp  ptuCamControl.h  spiralSearcher.cpp  spiralSearcher.h
perception/scene_understanding/active_scene_recognition_psm/src/.svn/: all-wcprops  entries
perception/scene_understanding/active_scene_recognition_psm/src/algorithm/: asrPosePredictorISM.cpp  asrPosePredictorISM.h  asrPosePredictorPSM.cpp  asrPosePredictorPSM.h  asrSceneFinderISM.cpp  asrSceneFinderISM.h  asrSceneFinderPSM.cpp  asrSceneFinderPSM.h
test/: check-dependencies.sh
(+121 files in other folders)
